--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github_react",
-  "website": "http://https://github.com/davedavedave123/davedavedave123.github.io",
+  "website": "https://davedavedave123.github.io/davedavedave123.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
